Name:               OnyxEdit
Version:            0.0.1
License:            GPL
Author:             Michael Tolly
Maintainer:         miketolly@gmail.com
Build-Type:         Simple
Cabal-Version:      >= 1.8
Category:           Sound
Data-Dir:           data
Data-Files:         gems.png, bg.png, staff.png, beat.png, now.png
                    , click.wav

Executable onyxedit
  Build-Depends:    base >= 4 && <= 5
                    , transformers
                    , containers
                    , ALUT
                    , SDL-image
                    , SDL
                    , midi
                    , event-list
                    , non-negative
  Main-Is:          main.hs
  Hs-Source-Dirs:   src
  Other-Modules:    Paths_OnyxEdit
                    OnyxEdit.Types
  Ghc-Options:      -Wall
