Name:               OnyxEdit
Version:            0.0.1
License:            GPL
Author:             Michael Tolly
Maintainer:         miketolly@gmail.com
Build-Type:         Simple
Cabal-Version:      >= 1.8
Category:           Sound
Data-Dir:           data
Data-Files:         gems.png, bg.png, staff.png, beat.png, now.png
                    , click.wav

Executable onyxedit
  Build-Depends:    base >= 4 && <= 5
                    , transformers
                    , containers
                    , OpenAL
                    , SDL-image
                    , SDL
                    , midi
                    , event-list
                    , non-negative
                    , data-accessor
                    , data-accessor-transformers
  Main-Is:          main.hs
  Hs-Source-Dirs:   src
  Other-Modules:    Paths_OnyxEdit
                    OnyxEdit.Types
                    OnyxEdit.Program
                    OnyxEdit.MIDI
                    OnyxEdit.Draw
                    OnyxEdit.Audio
  Ghc-Options:      -Wall
