Name:               OnyxEdit
Version:            0.0.1
License:            GPL
Author:             Michael Tolly
Maintainer:         miketolly@gmail.com
Build-Type:         Simple
Cabal-Version:      >= 1.8
Category:           Sound
Data-Dir:           data
Data-Files:         gems.png, bg.png, staff.png, now.png
                    , click.wav

Library
  Exposed-Modules:  OnyxEdit.Shell.Scan
                    OnyxEdit.Shell.Parse
  Hs-Source-Dirs:   src
  Build-Depends:    base >= 4 && <= 5
                    , array

Executable onyxedit
  Build-Depends:    base >= 4 && <= 5
                    , OnyxEdit
                    , array
                    , transformers
                    , containers
                    , OpenAL >= 1.4.0.2 && < 1.7
                    , SDL-image
                    , SDL
                    , midi
                    , event-list
                    , non-negative
                    , data-accessor
                    , data-accessor-transformers
  Hs-Source-Dirs:   src

  Other-Modules:    Paths_OnyxEdit
                    OnyxEdit.Types
                    OnyxEdit.Program
                    OnyxEdit.MIDI
                    OnyxEdit.Draw
                    OnyxEdit.Audio
                    OnyxEdit.Shell
  if os(darwin)
    Other-Modules:  Main

  if os(darwin)
    Main-Is:        HSMain.hs
  else
    Main-Is:        Main.hs

  if os(darwin)
    GHC-Options:    -no-hs-main -Wall
  else
    GHC-Options:    -Wall

  if os(darwin)
    C-Sources:        src/main.c
    Extra-Libraries:  SDLmain
    Includes:         src/HSMain_stub.h
