Name:               OnyxEdit
Version:            0.0.1
License:            GPL
Author:             Michael Tolly
Maintainer:         miketolly@gmail.com
Build-Type:         Simple
Cabal-Version:      >= 1.8
Category:           Sound
Data-Dir:           data
Data-Files:         gems.png, bg.png, measure.png, beat.png, subbeat.png, staff.png

Executable onyxedit
  Build-Depends:    base >= 4 && <= 5
                    , transformers
                    , containers
                    , ALUT
                    , SDL-image
                    , SDL
  Main-Is:          main.hs
  Hs-Source-Dirs:   src
  Other-Modules:    Paths_OnyxEdit
  Ghc-Options:      -Wall
